mongoose was connected

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
+#HTTP CONNECTION
 PORT=3000
 HOST=http://localhost:
+
+
+#MONGO CONNECTION
+MONGO_USERNAME=root
+MONGO_PASSWORD=Hakob29
+MONGO_KEY=mongodb+srv://root:Hakob29@top-api.kjkq9bp.mongodb.net/?retryWrites=true&w=majority 
