--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ HOST=http://localhost:
 MONGO_USERNAME=root
 MONGO_PASSWORD=Hakob29
 MONGO_KEY=mongodb+srv://root:Hakob29@top-api.kjkq9bp.mongodb.net/?retryWrites=true&w=majority 
+
+
+#JWT SECRET
+JWT_SECRET_KEY=SUPER-SECRET-SHARK
